<resources>
    <string name="app_name">GameFuse</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="gamefuse">GameFuse</string>
    <string name="forgotPassword">Forgot password</string>
    <string name="e_mail">E-mail</string>
    <string name="e_mail_backup">Back-up e-mail</string>
    <string name="nickname">Nickname</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="creer_un_compte">Subscribe</string>
    <string name="se_connecter">Log in</string>
    <string name="send_mail">Send mail</string>
    <string name="mot_de_passe_oubli">Forgot password ?</string>
    <string name="mail_sent_if_exist">Mail sent to specified address.</string>
    <string name="api_error">Service unavailable</string>
    <string name="invalid_credentials">Invalid credentials</string>
    <string name="not_corresponding_passwords">Passwords does not correspond</string>
    <string name="subscribe">Subscribe</string>
    <string name="no_friends_text">You have no friends yet 🥹</string>
    <string name="my_friends">My Friends</string>
    <string name="my_profile">My profile</string>
    <string name="username">Username</string>
    <string name="add_friends">Add friends</string>
    <string name="ranking">Ranking</string>
    <string name="no_friends_yet_image">No friends yet pic</string>
    <string name="manage_friend_image">add remove user pic</string>
    <string name="search_bar">Username, Firstname, Email</string>
    <string name="no_results_search">No results found for search: %1$s</string>
    <string name="search_friend_header">Search Friend</string>
    <string name="quit_activity_logo">Quit activity pic</string>
    <string name="birthdate">Birthdate</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="save">Save</string>
    <string name="my_invitations">My Friends requests</string>
    <string name="no_invitations_text">You have no friends requests yet</string>
    <string name="manage_invitation_image">Invitation accept/refuse pic</string>
    <string name="error_get_friend_request">Impossible to get your friends requests</string>
    <string name="add_friend">Add friend</string>
    <string name="accept_invite">Do you want to accept invite of %1$s ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="refuse_invite">Do you want to refuse invite of %1$s ?</string>
    <string name="error_picture">Impossible to load picture</string>
    <string name="invite_accepted">Friend request accepted</string>
    <string name="invite_refused">Friend request refused</string>
    <string name="score_board">Scoreboard</string>
    <string name="my_conversations">My conversations</string>
    <string name="conversation_title">Conversation with</string>
    <string name="send">Send message</string>
    <string name="enter_message">Enter message</string>

</resources>