<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotPassword"
            android:layout_gravity="center"
            android:textSize="35sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_radius_grey">

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="297dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:background="@null"
                android:hint="@string/e_mail_backup"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/black" />

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="15dp"
                android:id="@+id/problem_field_email"
                android:src="@drawable/warning"
                android:scaleType="centerInside" />
        </FrameLayout>

    </LinearLayout>



    <TextView
        android:id="@+id/textViewError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@color/red"
        android:layout_marginBottom="16dp"
        android:textStyle="bold"
        android:gravity="center"/>


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:visibility="gone"
        tools:visibility="visible"
        android:indeterminateTintMode="src_in"
        android:orientation="vertical"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/buttonForgotPassword"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:background="@drawable/custom_radius_green"
            android:layout_gravity="center"
            android:text="@string/send_mail" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:background="@drawable/custom_radius_blue"
            android:layout_gravity="center"
            android:text="@string/se_connecter" />

        <Button
            android:background="@drawable/custom_radius_blue"
            android:id="@+id/buttonSubscribe"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:text="@string/creer_un_compte"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"/>


    </LinearLayout>


</LinearLayout>
