<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="75dp"
        android:text="@string/subscribe"
        android:layout_gravity="center"
        android:textSize="35sp"
        android:textStyle="bold"
        android:textColor="@color/black"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_radius_grey">

            <EditText
                android:id="@+id/editTextNickName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/nickname"
                android:layout_gravity="center"
                android:inputType="text"
                android:padding="15dp"
                android:background="@null"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="15dp"
                android:id="@+id/problem_field_nickname"
                android:src="@drawable/warning"
                android:scaleType="centerInside" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_radius_grey">

            <EditText
                android:id="@+id/editTextLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/e_mail"
                android:layout_gravity="center"
                android:inputType="text"
                android:padding="15dp"
                android:background="@null"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="15dp"
                android:id="@+id/problem_field_email"
                android:src="@drawable/warning"
                android:scaleType="centerInside" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_radius_grey">

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword|textNoSuggestions"
                android:padding="15dp"
                android:background="@null"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="15dp"
                android:id="@+id/problem_field_password"
                android:src="@drawable/warning"
                android:scaleType="centerInside" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:background="@drawable/custom_radius_grey">

            <EditText
                android:id="@+id/editTextPasswordConfirmation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password_confirmation"
                android:inputType="textPassword|textNoSuggestions"
                android:padding="15dp"
                android:background="@null"
                android:textColor="@color/black"/>

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="end|center"
                android:layout_marginEnd="15dp"
                android:id="@+id/problem_field_password_confirmation"
                android:src="@drawable/warning"
                android:scaleType="centerInside" />

        </FrameLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textViewError"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="16sp"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:gravity="center"/>


    <LinearLayout
        android:layout_width="50dp"
        android:layout_height="75dp"
        android:layout_gravity="center">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="50dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:foregroundGravity="center"
            android:indeterminateTintMode="src_in"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp">

        <Button
            android:background="@drawable/custom_radius_green"
            android:id="@+id/buttonRegister"
            android:layout_width="300dp"
            android:layout_height="65dp"
            app:backgroundTint="@null"
            android:text="@string/creer_un_compte"
            android:layout_gravity="center"
            />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="300dp"
            android:layout_height="65dp"
            android:background="@drawable/custom_radius_blue"
            android:layout_gravity="center"
            android:text="@string/se_connecter"
            android:layout_marginTop="30dp"
            app:backgroundTint="@null"/>



    </LinearLayout>

</LinearLayout>
