<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05"
        android:id="@+id/guideline_start"
        />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95"
        android:id="@+id/guideline_end"
        />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"
        android:id="@+id/guideline_top"
        />

    <ImageView
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        android:scaleType="centerCrop"
        android:id="@+id/pp_user"
        android:contentDescription="@string/username" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:text="@string/username"
        android:textSize="30sp"
        android:layout_marginStart="25dp"
        android:gravity="center|start"
        app:layout_constraintStart_toEndOf="@id/pp_user"
        app:layout_constraintEnd_toStartOf="@id/accept_invitation"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        android:id="@+id/username_list_invitations"/>

    <ImageView
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:scaleType="center"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintEnd_toStartOf="@id/refuse_invitation"
        android:id="@+id/accept_invitation"
        android:src="@drawable/check_accept"
        android:contentDescription="@string/manage_invitation_image" />
    <ImageView
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:scaleType="center"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintEnd_toStartOf="@id/guideline_end"
        android:src="@drawable/cross_refuse"
        android:id="@+id/refuse_invitation"
        android:contentDescription="@string/manage_friend_image" />

</androidx.constraintlayout.widget.ConstraintLayout>