<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:background="@color/primary"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/header_searchFriend">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline_center_header"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|start"
            android:text="@string/score_board"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_center_header"
            app:layout_constraintBottom_toBottomOf="@id/guideline_center_header"
            android:layout_marginStart="20dp"
            android:textSize="20sp"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/guideline_center_header"
            app:layout_constraintBottom_toBottomOf="@id/guideline_center_header"
            android:layout_marginEnd="20dp"
            android:id="@+id/cross_quit_search_friend"
            android:src="@drawable/cross_quit"
            android:contentDescription="@string/quit_activity_logo" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView"
        tools:ignore="MissingConstraints" />



    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/primary"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/footer_search_friends">

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.6"
            android:id="@+id/guideline_middle_footer"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.15"
            android:id="@+id/guideline_first_footer"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            android:id="@+id/guideline_second_footer"/>

        <androidx.constraintlayout.widget.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85"
            android:id="@+id/guideline_third_footer"/>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:id="@+id/my_friends_section"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/guideline_middle_footer"
            app:layout_constraintBottom_toBottomOf="@id/guideline_middle_footer"
            app:layout_constraintStart_toStartOf="@id/guideline_first_footer"
            app:layout_constraintEnd_toEndOf="@id/guideline_first_footer">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/friends_icon_footer"
                android:layout_weight="0.35"
                android:contentDescription="@string/my_friends" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_weight="0.65"
                android:text="@string/my_friends"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:id="@+id/ranking_section"
            app:layout_constraintTop_toTopOf="@id/guideline_middle_footer"
            app:layout_constraintBottom_toBottomOf="@id/guideline_middle_footer"
            app:layout_constraintStart_toStartOf="@id/guideline_second_footer"
            app:layout_constraintEnd_toEndOf="@id/guideline_second_footer">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/trophy_not_focus_icon_footer"
                android:layout_weight="0.35"
                android:contentDescription="@string/ranking" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="11sp"
                android:gravity="center"
                android:layout_weight="0.65"
                android:text="@string/ranking"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:id="@+id/profil_section"
            app:layout_constraintTop_toTopOf="@id/guideline_middle_footer"
            app:layout_constraintBottom_toBottomOf="@id/guideline_middle_footer"
            app:layout_constraintStart_toStartOf="@id/guideline_third_footer"
            app:layout_constraintEnd_toEndOf="@id/guideline_third_footer">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/profil_not_focus_icon_footer"
                android:layout_weight="0.35"
                android:contentDescription="@string/my_profile" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_weight="0.65"
                android:text="@string/my_profile"/>


        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>